Project

General

Profile

Actions

Bug #14835

closed

src/test/cli/radosgw-admin/help.t: failed

Added by Loïc Dachary about 8 years ago. Updated about 8 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

https://jenkins.ceph.com/job/ceph-pull-requests/1868/console

Marking as urgent as it creates false negatives during pull request validation

src/test/cli/osdmaptool/tree.t: passed
# Ran 11 tests, 0 skipped, 0 failed.
src/test/cli/radosgw-admin/help.t: failed
--- /home/jenkins-build/build/workspace/ceph-pull-requests/src/test/cli/radosgw-admin/help.t
+++ ./src/test/cli/radosgw-admin/help.t.err
@@ -130,10 +130,11 @@
      --bucket-id=<bucket-id>
      --shard-id=<shard-id>     optional for mdlog list
                                required for: 
-                               mdlog trim
-                               replica mdlog get/delete
-                               replica datalog get/delete
+                                 mdlog trim
+                                 replica mdlog get/delete
+                                 replica datalog get/delete
      --metadata-key=<key>      key to retrieve metadata from with metadata get
+     --remote=<remote>         remote to pull period
      --parent=<id>             parent period id
      --period=<id>             period id
      --epoch=<number>          period epoch
@@ -174,8 +175,7 @@
      --categories=<list>       comma separated list of categories, used in usage show
      --caps=<caps>             list of caps (e.g., "usage=read, write; user=read" 
      --yes-i-really-mean-it    required for certain operations
-     --reset-zonegroups        reset zonegroupmap when zonegroupmap update
- 
+     --reset-regions           reset regionmap when regionmap update
   <date> := "YYYY-MM-DD[ hh:mm:ss]" 

   Quota options:
@@ -198,3 +198,4 @@

   [1]
Actions #1

Updated by xie xingguo about 8 years ago

@Loïc Dachary
A patch is already on the way, check below:

https://github.com/ceph/ceph/pull/7723

Actions #2

Updated by Loïc Dachary about 8 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Kefu Chai
Actions #3

Updated by Loïc Dachary about 8 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF