radosgw-admin: fix help.t

http://tracker.ceph.com/issues/14835 Fixes: #14835

Signed-off-by: Loic Dachary <loic@dachary.org>